--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,4 @@
 language: node_js
+before_install:
+  - chmod +x ./webapp/test/integration/opaTests.qunit.js
 script: ./webapp/test/integration/opaTests.qunit.js
