trying to fix error (6)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+install: npm install
 before_install:
   - chmod +x ./webapp/test/integration/opaTests.qunit.js
 script: ./webapp/test/integration/opaTests.qunit.js
