--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "private": true,
+  "devDependencies": {
+    "grunt": "^1.0.1",
+	"grunt-contrib-qunit": "^1.3.0"
+  },
   "scripts": {
     "test": "grunt unit_and_integration_tests"
   }
