--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 install: npm install
 before_install:
-  - chmod +x ./webapp/test/integration/opaTests.qunit.js
+  - chmod +x ./webapp
 script: ./webapp/test/integration/opaTests.qunit.js
