--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-install: npm install
-before_install:
-  - chmod +x ./webapp/test/integration/opaTests.qunit.html
-script: ./webapp/test/integration/opaTests.qunit.html
+dist: trusty
+sudo: required
+addons:
+  chrome: stable
