--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "private": true,
   "devDependencies": {
     "grunt": "^1.0.1",
-	"grunt-contrib-qunit": "^1.3.0"
+	"grunt-contrib-qunit": "^1.3.0",
+	"jasmine-core": "^2.8.0",
+    "karma": "^2.0.0",
+	"karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1"
   },
   "scripts": {
-    "test": "grunt unit_and_integration_tests"
+    "test": "karma start"
   }
 }
