--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "private": true,
   "devDependencies": {
     "karma": "^2.0.0",
-	"karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.1"
+	"karma-chrome-launcher": "^2.2.0"
   },
   "scripts": {
-    "test": "karma start"
+    "test": "karma start karma.conf.js"
   }
 }
