--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ before_script:
   - npm install -g karma-cli
   - npm install --save-dev karma karma-ui5
   - npm install --save-dev karma-chrome-launcher
+script: karma start
